// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project renders correctly 1`] = `
<div
  className="project-bar project-success project-sleeping"
>
  <div
    className="project-name text-ellipsis"
  >
    my-project
  </div>
</div>
`;

exports[`Project renders with the project's long name 1`] = `
<div
  className="project-bar project-success project-sleeping"
>
  <div
    className="project-name text-ellipsis"
  >
    org/my-project
  </div>
</div>
`;
